; ModuleID = '/home/carl/AnghaBench/postgres/contrib/hstore/extr_hstore_io.c_hstoreCheckValLen.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/hstore/extr_hstore_io.c_hstoreCheckValLen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HSTORE_MAX_VALUE_LEN = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_STRING_DATA_RIGHT_TRUNCATION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"string too long for hstore value\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hstoreCheckValLen(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @HSTORE_MAX_VALUE_LEN, align 8
  %5 = icmp ugt i64 %3, %4
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @ERROR, align 4
  %8 = load i32, i32* @ERRCODE_STRING_DATA_RIGHT_TRUNCATION, align 4
  %9 = call i32 @errcode(i32 %8)
  %10 = call i32 @errmsg(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @ereport(i32 %7, i32 %10)
  br label %12

12:                                               ; preds = %6, %1
  %13 = load i64, i64* %2, align 8
  ret i64 %13
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
